removed link and link class and fixed spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -133,10 +133,6 @@ p.hack {
   line-height: 30px;
   letter-spacing: 5%;
 }
-.hack .link:hover {
-  color: $output-orange;
-  text-decoration: none;
-}
 
 .button-unstyled {
   border: 0px;
